--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>cloud2020-eureka-server-7001</module>
         <module>cloud2020-provider-user-8001</module>
+        <module>cloud2020-api-commons</module>
     </modules>
 
     <properties>
