--- a/cloud2020-eureka-server-7001/src/main/resources/application.yml
+++ b/cloud2020-eureka-server-7001/src/main/resources/application.yml
@@ -9,7 +9,9 @@ eureka:
   instance:
     hostname: eureka7001.com
   client:
+    # false表示不向注册中心注册自己
     register-with-eureka: false
+    # false表示不从注册中心抓取服务信息
     fetch-registry: false
     service-url:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka
