--- a/cloud2020-provider-user-8001/pom.xml
+++ b/cloud2020-provider-user-8001/pom.xml
@@ -13,6 +13,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.pang.cloud</groupId>
             <artifactId>cloud2020-api-commons</artifactId>
             <version>${project.version}</version>
