--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>cloud2020-consumer-front-80</module>
         <module>cloud2020-eureka-server-7002</module>
         <module>cloud2020-eureka-server-7003</module>
+        <module>cloud2020-provider-user-8002</module>
+        <module>cloud2020-provider-user-8003</module>
     </modules>
 
     <properties>
