--- a/cloud2020-consumer-front-80/src/main/resources/application.yml
+++ b/cloud2020-consumer-front-80/src/main/resources/application.yml
@@ -6,10 +6,10 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:7001/eureka
+      defaultZone: http://eureka7001:7001/eureka,http://eureka7002.com:7002/eureka,http://eureka7003.com:7003/eureka
   instance:
     prefer-ip-address: true
-    instance-id: cloud2020-provider-user-8001
+    instance-id: cloud2020-consumer-front-80
 
 spring:
   application:
